5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4490/executions/1590_2895.log
== SUBMITION (2019-03-31 18:49:29) 
-- CODE:
n = int(input())
prec = float(input())
fretao = float(input())

print(round(n*prec + fretao)
-- EXECUTION TIME:
0.191689
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:49:42) 
-- CODE:
n = int(input())
prec = float(input())
fretao = float(input())

print(round(n*prec + fretao))
-- EXECUTION TIME:
0.127776
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
